// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it returns the config as JSON 1`] = `
Object {
  "assetsPath": "C:\\\\Users\\\\Veit Bjarsch\\\\springer\\\\red-udssr\\\\dist\\\\assets",
  "assetsUrlPath": "/assets/",
  "client": Object {},
  "copy": Array [],
  "devServer": Object {},
  "entryClient": "C:\\\\Users\\\\Veit Bjarsch\\\\springer\\\\red-udssr\\\\src\\\\entry.client.js",
  "entryServer": "C:\\\\Users\\\\Veit Bjarsch\\\\springer\\\\red-udssr\\\\src\\\\entry.server.js",
  "filename": "[name].[contenthash:8].js",
  "isCDN": false,
  "middleware": Object {
    "after": Array [],
    "before": Array [],
  },
  "outputPath": "C:\\\\Users\\\\Veit Bjarsch\\\\springer\\\\red-udssr\\\\dist",
  "server": Object {},
  "svgSpriteFilename": "sprite.[contenthash:8].svg",
  "template": "C:\\\\Users\\\\Veit Bjarsch\\\\springer\\\\red-udssr\\\\public\\\\index.html",
}
`;

exports[`it uses the default options 1`] = `
Object {
  "assetsPath": "C:\\\\Users\\\\Veit Bjarsch\\\\springer\\\\red-udssr\\\\dist\\\\assets",
  "assetsUrlPath": "/assets/",
  "client": [Function],
  "copy": Array [],
  "devServer": [Function],
  "entryClient": "C:\\\\Users\\\\Veit Bjarsch\\\\springer\\\\red-udssr\\\\src\\\\entry.client.js",
  "entryServer": "C:\\\\Users\\\\Veit Bjarsch\\\\springer\\\\red-udssr\\\\src\\\\entry.server.js",
  "filename": "[name].[contenthash:8].js",
  "isCDN": false,
  "middleware": Object {
    "after": Array [],
    "before": Array [],
  },
  "outputPath": "C:\\\\Users\\\\Veit Bjarsch\\\\springer\\\\red-udssr\\\\dist",
  "server": [Function],
  "svgSpriteFilename": "sprite.[contenthash:8].svg",
  "template": "C:\\\\Users\\\\Veit Bjarsch\\\\springer\\\\red-udssr\\\\public\\\\index.html",
}
`;

exports[`it uses the options passed to it 1`] = `
Object {
  "assetsPath": "C:\\\\Users\\\\Veit Bjarsch\\\\springer\\\\red-udssr\\\\dist\\\\assets",
  "assetsUrlPath": "/assets/",
  "client": [Function],
  "copy": Array [],
  "devServer": [Function],
  "entryClient": "src/foobar.js",
  "entryServer": "C:\\\\Users\\\\Veit Bjarsch\\\\springer\\\\red-udssr\\\\src\\\\entry.server.js",
  "filename": "[name].[contenthash:8].js",
  "isCDN": false,
  "middleware": Object {
    "after": Array [],
    "before": Array [],
  },
  "outputPath": "C:\\\\Users\\\\Veit Bjarsch\\\\springer\\\\red-udssr\\\\dist",
  "server": [Function],
  "svgSpriteFilename": "sprite.[contenthash:8].svg",
  "template": "C:\\\\Users\\\\Veit Bjarsch\\\\springer\\\\red-udssr\\\\public\\\\index.html",
}
`;
